force-app/main/default/objects/OpportunitySplit/fields/Director_Copy_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Director_Copy_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Copy Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Director_Copy_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>