force-app/main/default/objects/OpportunitySplit/fields/Director_Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Director_Email_Copy__c</fullName>
    <label>Director Email Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>