force-app/main/default/objects/OpportunitySplit/fields/Director_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Director_Name_Copy__c</fullName>
    <label>Director Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>