force-app/main/default/objects/OpportunitySplit/fields/Director_Role_Copy__c.field-meta.xml
<CustomField>
    <fullName>Director_Role_Copy__c</fullName>
    <label>Director Role Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>