force-app/main/default/objects/OpportunitySplit/fields/Manager_Copy_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Manager_Copy_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Copy Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_Copy_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>