force-app/main/default/objects/OpportunitySplit/fields/Manager_Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Copy__c</fullName>
    <label>Manager Email Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>