force-app/main/default/objects/OpportunitySplit/fields/Manager_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name_Copy__c</fullName>
    <label>Manager Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>