force-app/main/default/objects/OpportunitySplit/fields/Manager_Role_Copy__c.field-meta.xml
<CustomField>
    <fullName>Manager_Role_Copy__c</fullName>
    <label>Manager Role Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>