force-app/main/default/objects/OpportunitySplit/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>