force-app/main/default/objects/OpportunitySplit/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>